<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_splash"
    android:theme="@style/Theme.AppCompat.Light.Dialog">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <EditText
            android:id="@+id/restaurant_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="left"
            android:hint="Название ресторана" />

    </LinearLayout>

    <Button
        android:id="@+id/rest_cuisine_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Выберите кухню"/>

    <ScrollView
        android:id="@+id/rest_cuisine_view"
        android:layout_width="match_parent"
        android:layout_height="250sp"
        android:visibility="gone"
        android:background="@drawable/borders">

        <LinearLayout
            android:id="@+id/rest_cuisine_container"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            tools:ignore="ExtraText">/

        </LinearLayout>

    </ScrollView>

    <Button
        android:id="@+id/avg_price_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Средний чек"/>

    <ScrollView
        android:id="@+id/avg_price_view"
        android:layout_width="match_parent"
        android:layout_height="fill_parent"
        android:background="@drawable/borders"
        android:visibility="gone">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <CheckBox
                android:id="@+id/price_under1000"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/under1000" />

            <CheckBox
                android:id="@+id/price_from1000"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/from1000" />

            <CheckBox
                android:id="@+id/price_from2000"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/from2000" />

            <CheckBox
                android:id="@+id/price_from3500"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/from3500" />

            <CheckBox
                android:id="@+id/price_over5000"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/over5000" />

        </LinearLayout>


    </ScrollView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAllCaps="true"
            android:text="Оценка: от"/>

        <Spinner
            android:id="@+id/restaurant_rating_from"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAllCaps="true"
            android:text="до"/>

        <Spinner
            android:id="@+id/restaurant_rating_to"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

    </LinearLayout>

    <Button
        android:id="@+id/rest_type_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Тип заведения"/>

    <ScrollView
        android:id="@+id/rest_type_view"
        android:layout_width="match_parent"
        android:layout_height="250sp"
        android:visibility="gone"
        android:background="@drawable/borders">

        <LinearLayout
            android:id="@+id/rest_type_container"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">/


        </LinearLayout>


    </ScrollView>


    <Button
        android:id="@+id/features_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Особенности заведения"/>

    <ScrollView
        android:id="@+id/features_view"
        android:layout_width="match_parent"
        android:layout_height="240sp"
        android:visibility="gone"
        android:background="@drawable/borders">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">/

            <CheckBox
                android:id="@+id/features_delivery"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/delivery"/>
            <CheckBox
                android:id="@+id/features_banquet"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/banquet"/>
            <CheckBox
                android:id="@+id/features_roundtheclock"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/roundtheclock"/>
            <CheckBox
                android:id="@+id/features_panorama"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/panorama"/>
            <CheckBox
                android:id="@+id/features_veranda"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/veranda"/>
            <CheckBox
                android:id="@+id/features_wifi"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/wifi"/>
            <CheckBox
                android:id="@+id/features_livemusic"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/livemusic"/>
            <CheckBox
                android:id="@+id/features_coffetogo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/coffeetogo"/>
            <CheckBox
                android:id="@+id/features_breakfast"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/breakfast"/>
            <CheckBox
                android:id="@+id/features_kidsanimation"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/kidsanimation"/>
            <CheckBox
                android:id="@+id/features_businesslunch"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/businesslunch"/>
            <CheckBox
                android:id="@+id/features_hookah"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/hookah"/>
            <CheckBox
                android:id="@+id/features_karaoke"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/karaoke"/>
            <CheckBox
                android:id="@+id/features_livesports"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/livesports"/>
            <CheckBox
                android:id="@+id/features_homecuisine"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/homecuisine"/>
        </LinearLayout>


    </ScrollView>



</LinearLayout>