<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_splash">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <EditText
            android:id="@+id/dish_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="left"
            android:hint="Название блюда" />

    </LinearLayout>
    <EditText
        android:id="@+id/dish_price"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="number"
        android:hint="Цена (до...)"/>


    <Button
        android:id="@+id/dish_cuisine_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Выберите кухню"/>

    <ScrollView
        android:id="@+id/dish_cuisine_view"
        android:layout_width="match_parent"
        android:layout_height="330sp"
        android:visibility="gone"
        android:background="@drawable/borders">

        <LinearLayout
            android:id="@+id/dish_cuisine_container"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <!-- place for cuisine checkboxes-->
        </LinearLayout>

    </ScrollView>

    <Button
        android:id="@+id/dish_type_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Тип блюда"/>

    <ScrollView
        android:id="@+id/dish_type_view"
        android:layout_width="match_parent"
        android:layout_height="330sp"
        android:visibility="gone"
        android:background="@drawable/borders">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">



            <CheckBox
                android:id="@+id/breakfasts"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/breakfasts"/>
            <CheckBox
                android:id="@+id/starters"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/starters"/>

            <LinearLayout
                android:id="@+id/starters_constituents"
                android:visibility="gone"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20sp"
                android:orientation="vertical">
                <CheckBox
                    android:id="@+id/starters_cheese"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/cheese"/>
                <CheckBox
                    android:id="@+id/starters_other"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/other"/>
                <CheckBox
                    android:id="@+id/starters_meat"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/meat"/>
            </LinearLayout>

            <CheckBox
                android:id="@+id/soups"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/soups"/>

            <LinearLayout
                android:id="@+id/soups_constituents"
                android:visibility="gone"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20sp"
                android:orientation="vertical">
                <CheckBox
                    android:id="@+id/soups_fish"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/fish"/>
                <CheckBox
                    android:id="@+id/soups_seaproducts"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/seaproducts"/>
                <CheckBox
                    android:id="@+id/soups_vegetables"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/vegetables"/>
                <CheckBox
                    android:id="@+id/soups_ofmeat"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/ofmeat"/>
            </LinearLayout>

            <CheckBox
                android:id="@+id/maincourses"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/maincourses"/>

            <LinearLayout
                android:id="@+id/maincourses_constituents"
                android:visibility="gone"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20sp"
                android:orientation="vertical">
                <CheckBox
                    android:id="@+id/maincourses_fish"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/fish"/>
                <CheckBox
                    android:id="@+id/maincourses_bird"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/bird"/>
                <CheckBox
                    android:id="@+id/maincourses_meat"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/meat"/>
                <CheckBox
                    android:id="@+id/maincourses_seaproducts"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/seaproducts"/>
            </LinearLayout>

            <!-->_____________________________________________________________________<!-->
            <CheckBox
                android:id="@+id/salads"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/salads"/>

            <LinearLayout
                android:id="@+id/salads_constituents"
                android:visibility="gone"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20sp"
                android:orientation="vertical">
                <CheckBox
                    android:id="@+id/salads_seaproducts"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/seaproducts"/>
                <CheckBox
                    android:id="@+id/salads_ofmeat"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/ofmeat"/>
                <CheckBox
                    android:id="@+id/salads_vegetables"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/vegetables"/>
                <CheckBox
                    android:id="@+id/salads_bird"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/bird"/>
                <CheckBox
                    android:id="@+id/salads_fish"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/fish"/>
            </LinearLayout>

            <!-->_____________________________________________________________________<!-->

            <CheckBox
                android:id="@+id/desserts"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/desserts"/>
            <LinearLayout
                android:id="@+id/desserts_constituents"
                android:visibility="gone"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20sp"
                android:orientation="vertical">
                <CheckBox
                    android:id="@+id/desserts_jelly"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/jelly"/>
                <CheckBox
                    android:id="@+id/desserts_icecream"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/icecream"/>
                <CheckBox
                    android:id="@+id/desserts_cakes"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/cakes"/>
                <CheckBox
                    android:id="@+id/desserts_other"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/other"/>
            </LinearLayout>

            <CheckBox
                android:id="@+id/hotstarters"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/hotstarters"/>
            <CheckBox
                android:id="@+id/grill"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/grill"/>
            <LinearLayout
                android:id="@+id/grill_constituents"
                android:visibility="gone"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20sp"
                android:orientation="vertical">
                <CheckBox
                    android:id="@+id/grill_bird"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/bird"/>
                <CheckBox
                    android:id="@+id/grill_seaproducts"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/seaproducts"/>
                <CheckBox
                    android:id="@+id/grill_fish"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/fish"/>
                <CheckBox
                    android:id="@+id/grill_meat"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/meat"/>
            </LinearLayout>

            <CheckBox
                android:id="@+id/garnish"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/garnish"/>
        </LinearLayout>
    </ScrollView>


</LinearLayout>